correctly toggling visibility of projects/home

--- a/src/App.css
+++ b/src/App.css
@@ -17,9 +17,9 @@
 }
 
 .HomeList, .ProjectList {
-	display: block;
-	position: relative;
-	top: 0;
+	position: absolute;
+	top: 6em;
+	left: 0;
 }
 
 .HomeListIsVisible {
@@ -28,13 +28,13 @@
 .HomeListIsHidden {
 	visibility: hidden;
 }
-.ProjectListIsHidden {
-	visibility: hidden;
-}
+
 .ProjectListIsVisible {
 	visibility: visible;
 }
-
+.ProjectListIsHidden {
+	visibility: hidden;
+}
 img {
   width: 30em;	
 }
